# leaderdata-sdk

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
leaderdata/: __main__.py  api.py  conf.py  exceptions.py
